<resources>
    <string name="app_name">GeoMaster</string>
    <string name="start_patuhan">Выберите фигуру</string>
    <string name="start_patuhan_standart">Выберите что хотите выучить</string>
    <string name="qarakusu_paraagit_1">Периметр квадрата равен сумме 4-х длин его сторон или произведению длины любой его стороны на четыре</string>
    <string name="qarakusu_paragit_2">Периметр обозначается Р</string>
    <string name="qarakusu_paragit_3">Р = a+b+c+d </string>
    <string name="qarakusu_paragit_4">Периметр решаеться так </string>
    <string name="qarakusu_paragit_5">или </string>
    <string name="qarakusu_paragit_6">P = a * 4 </string>
    <string name="qarakusu_paragit_7">Задание: Найти периметр квадрата,если длина стороны равна 5 см. </string>
    <string name="qarakusu_makeres_1">Так как у квадрата все стороны равны, для вычисления площади нужно просто умножить высоту на ширину или, другими словами.нам нужно возвести известную нам величину в квадрат, то есть умножить на саму себя. </string>
    <string name="qarakusu_makeres_2">Эта формула выглядит так:</string>
    <string name="qarakusu_makeres_3">S = a * a</string>
    <string name="qarakusu_makeres_4">или</string>
    <string name="qarakusu_makeres_5">S = a * b</string>
    <string name="qarakusu_makeres_6">Задание: вычислите площадь квадрата если его сторона равна 9.</string>
    <string name="qarakusu_nerqnadziq_1">Чтобы решить диагональ квадрата нужно просто умножить его сторону в квадрате на саму себя и разделить на корень.</string>
    <string name="qarakusu_nerqnadziq_2">D = (a * a)+(b * b)</string>
    <string name="qarakusu_nerqnadziq_3">Потом:√D = c</string>
    <string name="qarakusu_nerqnadziq_4">Задание: Вычислить диагональ квадрата если его сторона равна 5.</string>
    <string name="sh_radius_1">Круг - часть плоскости, которая лежит внутри окружности.У круга есть радиус и диаметр.Их назначают так ~</string>
    <string name="sh_radius_2">Радиус:r</string>
    <string name="sh_radius_3">Диаметр:d</string>
    <string name="sh_radius_4">Задание: Сколько будет диаметр круга, если r = 15.</string>
    <string name="erankyun_makeres_1">Решить площадь можно зная сторону и высоту триугольника.</string>
    <string name="erankyun_makeres_2">1.Умножье сторону треугольника на высоту,проведённую к этой стороне</string>
    <string name="erankyun_makeres_3">2.Поделите результат на два.</string>
    <string name="erankyun_makeres_4">S = (a * h) / 2</string>
    <string name="erankyun_makeres_5">Например а =15:h = 6</string>
    <string name="erankyun_makeres_6">S = (15 * 6) / 2 = 45</string>
    <string name="erankyun_makeres_7">Задание:Вичеслить плошадь триуголника если а = 6,h=9</string>
    <string name="erankyun_paragit_1">Периметр треугольника равняется сумме всех его сторон.</string>
    <string name="erankyun_paragit_2">Формула будет:P = a + b + с.</string>
    <string name="erankyun_paragit_3">где Р это периметр и а, b, с -стороны треугольника.</string>
    <string name="erankyun_paragit_4">Задание:Вычислить площадь треугольника если а = 10,b = 90,c = 23.</string>
    <string name="shrjan_makeres_1">Формула: S = π * (r * r) где r - эторадиус, π - это константа,которая выражает отношениедлины окружности к диаметру,она приблизительно равна 3,14.</string>
    <string name="shrjan_makeres_2">Например r = 9</string>
    <string name="shrjan_makeres_3">S = 𝜋 * (9 * 9)</string>
    <string name="shrjan_makeres_4">S = 𝜋81</string>
    <string name="shrjan_makeres_5">Задание:Вычислить площадь круга если r = 5.</string>
    <string name="shrjan_erkarutyun_1">Мы имеем формулу для вычисления длины окружности.Если вспомним, что d = 2 r, то формула длины окружности будет выглядеть так: </string>
    <string name="shrjan_erkarutyun_2">C = 2𝜋 * r</string>
    <string name="shrjan_erkarutyun_3">Например:r = 7</string>
    <string name="shrjan_erkarutyun_4">C = 𝜋 * (2 * 7) = 𝜋14</string>
    <string name="shrjan_erkarutyun_5">Задание: Вычислить длину круга если r = 10.</string>
    <string name="pi">𝜋</string>
    <string name="armat">√</string>
    <string name="sexan_paragit">Периметр трапеции равен сумме 4-х её сторон (a, b, c, d).</string>
    <string name="sexan_paragit_2">P=a+b+c+d.</string>
    <string name="sexan_paragit_3">Задание: Вычислить периметр трапеция если a=7,b=10,c=15,d=15.</string>
    <string name="sexan_makeres_1">Площадь трапеции вычисляется по формуле S = (a + b) * h / 2.</string>
    <string name="sexan_makeres_2">где a и b — длины оснований трапеции</string>
    <string name="sexan_makeres_3">а h — высота.</string>
    <string name="sexan_makeres_4">Например a=15,b=10,h=5.</string>
    <string name="sexan_makeres_5">S=((15+10)*5)/2 = 62,5.</string>
    <string name="sexan_makeres_6">Задание:Вичеслить площадь  трапеция если a=9,b=7,h=10.</string>
    <string name="zug_paragit_1">Параллелограмм — это четырехугольник, у которого противоположные стороны параллельны и равны по длине. Периметр параллелограмма можно найти по формуле:</string>
    <string name="zug_paragit_2">P = 2(a + b)</string>
    <string name="zug_paragit_3">где a и b — длины двух соседних сторон параллелограмма.</string>
    <string name="zug_paragit_4">Задание:Вычислить Периметр параллелограмм если a=5,b=10.</string>
    <string name="zug_makeres_1">Площадь параллелограмма можно вычислить с помощью формулы:</string>
    <string name="zug_makeres_2">S = а·b·sin(α)</string>
    <string name="zug_makeres_3">где а и b – длины сторон параллелограмма, а α – угол между этими сторонами.</string>
    <string name="zug_makeres_4">Например a=6,b=7,sin(α) = 30^.</string>
    <string name="zug_makeres_5">sin(30) = 0.5.</string>
    <string name="zug_makeres_6">S = (7*6)*0.5 = 21.</string>
    <string name="zug_makeres_7">Задание:Вычислить площадь параллелограмм если a=4,b=9,sin(α) = 30^.</string>
    <string name="erankyun_gradus_1">Теорема суме углов</string>
    <string name="erankyun_gradus_2">Сумма углов любого треугольника на евклидовой плоскости равна 180°.</string>
    <string name="erankyun_gradus_3">a +  b + c = 180°</string>
    <string name="erankyun_gradus_4">Задание:Какой градус будет у ‘а’ угла если  ‘b’ = 100° а ‘a’ = 57°.</string>
    <string name="erankyun_sinus_1">Теорема синусов</string>
    <string name="erankyun_sinus_2">Теоре́ма си́нусов — теорема, устанавливающая зависимость между длинами сторон треугольника и величиной противолежащих им углов. Существуют два варианта теоремы; обычная теорема синусов:</string>
    <string name="erankyun_sinus_3">Стороны треугольника пропорциональны синусам противолежащих углов.</string>
    <string name="erankyun_sinus_4">a/sinα =  b/sinβ =  c/sinγ</string>
    <string name="erankyun_sinus_5">и расширенная теорема синусов</string>
    <string name="erankyun_sinus_6">a/sinα = b/sinβ = c/sinγ = (R * R)</string>
    <string name="erankyun_sinus_7">Задание:Основание треугольника равно 10 см, один из углов при основании равен 60°, а противолежащий основанию угол равен 30°. Найдите сторону, противолежащую углу в 30°.</string>
    <string name="erankyun_cos_1">Теорема косинусов</string>
    <string name="erankyun_cos_2">Теорема косинусов — теорема евклидовой геометрии, обобщающая теорему Пифагора на произвольные плоские треугольники.</string>
    <string name="erankyun_cos_3">Формулировка:(a * a) = (b * b) + (c * c) - 2 * b * c * cosα.</string>
    <string name="erankyun_cos_4">Следствие из теоремы косинусов:</string>
    <string name="erankyun_cos_5">Теорема косинусов может быть использована для нахождения косинуса угла треугольника</string>
    <string name="erankyun_cos_6">cosα = ((b*b) + (c*c) - (a*a))/(2 * a * b)</string>
    <string name="erankyun_cos_7">Задание. В треугольнике ABC, AC = 5,BC = 5,и AB=5 Найти угол, противолежащий стороне AB</string>
    <string name="erankyun_cos_8">Если цифра такая "0.1" то цифру пишитите вот так "01"</string>
    <string name="klor_sektor_1">Сектор круга</string>
    <string name="klor_sektor_2">Сектор круга — часть круга, ограниченная дугой и двумя радиусами, соединяющими концы дуги с центром круга.</string>
    <string name="klor_sektor_3">Площадь плоского сектора:(r * L)/ 2</string>
    <string name="klor_sektor_4">Где r-радиус а L-длина дуги сектора.</string>
    <string name="klor_sektor_5">Задание:вычислить площадь сектора если r = 5,L = 10.</string>
    <string name="klor_sigment_1">Сегмент круга</string>
    <string name="klor_sigment_2">Сегме́нт кру́га — часть круга, ограниченная дугой окружности и её хордой.</string>
    <string name="klor_sigment_3">S = (𝜋(r*r)) * (α / 360) - (((r*r) * sinα)/2)</string>
    <string name="klor_sigment_4">Формулa</string>
    <string name="klor_sigment_5">Задание:Вычислить периметр симента если α = 30,r = 6.</string>

</resources>