<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_glxavor"
    tools:context=".shrjanagci_erkarutyun">

    <TextView
        android:layout_width="331dp"
        android:layout_height="207dp"
        android:text="@string/shrjan_erkarutyun_1"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:layout_width="129dp"
        android:layout_height="68dp"
        android:text="@string/shrjan_erkarutyun_2"
        android:textColor="@color/red"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.358" />

    <TextView
        android:layout_width="197dp"
        android:layout_height="53dp"
        android:text="@string/shrjan_erkarutyun_3"
        android:textColor="@color/red"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="249dp"
        android:layout_height="56dp"
        android:text="@string/shrjan_erkarutyun_4"
        android:textColor="@color/red"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />

    <TextView
        android:layout_width="316dp"
        android:layout_height="102dp"
        android:text="@string/shrjan_erkarutyun_5"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712" />

    <TextView
        android:layout_width="31dp"
        android:layout_height="37dp"
        android:text="@string/pi"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/patasxan_klor_erkarutyun"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <EditText
        android:id="@+id/patasxan_klor_erkarutyun"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_rounder_corner"
        android:backgroundTint="@color/N1"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <ImageView
        android:id="@+id/microfon"
        android:layout_width="43dp"
        android:layout_height="52dp"
        android:layout_marginEnd="36dp"
        android:onClick="Click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/patasxan_klor_erkarutyun"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86"
        app:srcCompat="@drawable/miqrafon_off" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="112dp"
        android:layout_height="99dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428"
        app:srcCompat="@drawable/klor_1" />


</androidx.constraintlayout.widget.ConstraintLayout>