<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_glxavor"
    tools:context=".qarankyun_Makeres">


    <TextView
        android:layout_width="334dp"
        android:layout_height="329dp"
        android:text="@string/qarakusu_makeres_1"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:layout_width="153dp"
        android:layout_height="131dp"
        android:text="@string/qarakusu_makeres_2"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />

    <TextView
        android:layout_width="153dp"
        android:layout_height="131dp"
        android:text="@string/qarakusu_makeres_3"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <TextView
        android:layout_width="98dp"
        android:layout_height="57dp"
        android:text="@string/qarakusu_makeres_4"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />


    <TextView
        android:layout_width="131dp"
        android:layout_height="61dp"
        android:text="@string/qarakusu_makeres_5"
        android:textColor="@color/red"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <TextView
        android:layout_width="327dp"
        android:layout_height="68dp"
        android:text="@string/qarakusu_makeres_6"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />

    <EditText
        android:id="@+id/patasxan_Makeres"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_rounder_corner"
        android:backgroundTint="@color/N1"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <ImageView
        android:id="@+id/microfon"
        android:layout_width="43dp"
        android:layout_height="52dp"
        android:layout_marginEnd="36dp"
        android:onClick="Click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/patasxan_Makeres"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92"
        app:srcCompat="@drawable/miqrafon_off" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="151dp"
        android:layout_height="126dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537"
        app:srcCompat="@drawable/qarakusu_makeres_ab" />


</androidx.constraintlayout.widget.ConstraintLayout>