<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_glxavor"
    tools:context=".klor_sigment">

    <TextView
        android:layout_width="261dp"
        android:layout_height="101dp"
        android:text="@string/klor_sigment_1"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:layout_width="347dp"
        android:layout_height="174dp"
        android:text="@string/klor_sigment_2"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.177" />


    <TextView
        android:layout_width="134dp"
        android:layout_height="80dp"
        android:text="@string/klor_sigment_4"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296" />

    <TextView
        android:layout_width="347dp"
        android:layout_height="174dp"
        android:text="@string/klor_sigment_3"
        android:textColor="@color/red"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <TextView
        android:layout_width="347dp"
        android:layout_height="174dp"
        android:text="@string/klor_sigment_5"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734" />

    <EditText
        android:id="@+id/patasxan_klor_sigment"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_rounder_corner"
        android:backgroundTint="@color/N1"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832" />

    <ImageView
        android:id="@+id/microfon"
        android:layout_width="43dp"
        android:layout_height="52dp"
        android:layout_marginEnd="36dp"
        android:onClick="Click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/patasxan_klor_sigment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832"
        app:srcCompat="@drawable/miqrafon_off" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="131dp"
        android:layout_height="134dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457"
        app:srcCompat="@drawable/klor_segment_abc" />

</androidx.constraintlayout.widget.ConstraintLayout>