<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_glxavor"
    tools:context=".zugaheranist_paragit_act">

    <TextView
        android:layout_width="336dp"
        android:layout_height="239dp"
        android:text="@string/zug_paragit_1"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:layout_width="149dp"
        android:layout_height="86dp"
        android:text="@string/zug_paragit_2"
        android:textColor="@color/red"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:layout_width="326dp"
        android:layout_height="94dp"
        android:text="@string/zug_paragit_3"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:layout_width="325dp"
        android:layout_height="128dp"
        android:text="@string/zug_paragit_4"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683" />

    <EditText
        android:id="@+id/zugaheranist_paragit_"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_rounder_corner"
        android:backgroundTint="@color/N1"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866" />

    <ImageView
        android:id="@+id/microfon"
        android:layout_width="43dp"
        android:layout_height="52dp"
        android:layout_marginEnd="36dp"
        android:onClick="Click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/zugaheranist_paragit_"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865"
        app:srcCompat="@drawable/miqrafon_off" />

</androidx.constraintlayout.widget.ConstraintLayout>